# patrol-sim

./: .gitignore  README.md  pyproject.toml  server.py
docs/: api.md  architecture.md  graph-editor.md
docs/plans/: 2026-02-25-robot-patrol-sim-design.md  2026-02-25-robot-patrol-sim-plan.md
docs/superpowers/plans/: 2026-05-20-edge-aux-views.md
docs/superpowers/specs/: 2026-05-20-edge-aux-views-design.md  2026-05-20-edge-view-ui-redesign-design.md
graphs/: small upper test.json
graphs/smart_ais/: default 1.json  test_graph.json
graphs/structural/: full.json  lower test.json
navigation/: graph.py  robot.py
scripts/: optimize_mesh.py  render_route.py  split_mesh.py
static/: index.html  potree-view.html
tests/: conftest.py  test_graph.py  test_robot.py  test_server.py  test_vision.py
vision/: base.py  grounding_dino.py  yolo.py
