[project]
name = "robot-patrol-sim"
version = "0.1.0"
description = "Robot patrol simulator with pluggable vision pipeline"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.3.0",
    "ultralytics>=8.0.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "plyfile>=1.1.3",
    "trimesh>=4.11.2",
    "scipy>=1.17.1",
    "transformers>=5.2.0",
    "accelerate>=1.12.0",
    "fast-simplification>=0.1.13",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
